--- a/.github/workflows/Quarto Render Book Push Other Repo Tweet Updates.yml
+++ b/.github/workflows/Quarto Render Book Push Other Repo Tweet Updates.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           source-directory: '_book'
           destination-github-username: 'whowriteswho'
-          destination-repository-name: 'deneme2'
+          destination-repository-name: 'whowriteswho.github.io'
           user-email: drserdarbalci@gmail.com
           target-branch: main
 
