--- a/.github/workflows/Quarto Render Book Push Other Repo Tweet Updates.yml
+++ b/.github/workflows/Quarto Render Book Push Other Repo Tweet Updates.yml
@@ -21,8 +21,8 @@ jobs:
       #   run: |
       #     pip install -r requirements.txt
 
-      # - uses: r-lib/actions/setup-r@v1
-      #
+      - uses: r-lib/actions/setup-r@v1
+
       # - name: "Install curl for Bioconductor"
       #   run: |
       #     sudo apt -y install libcurl4-openssl-dev
